packages/tree-sitter/typedown-md/test/corpus/code_blocks/basic.txt
================
Code block with language
================

```python
print("hello")
```

---

(document
  (section
    (fenced_code_block
      (fenced_code_block_delimiter)
      language: (language)
      (code_fence_content)
      (fenced_code_block_delimiter))))

================
Code block without language
================

```
some code
```

---

(document
  (section
    (fenced_code_block
      (fenced_code_block_delimiter)
      (code_fence_content)
      (fenced_code_block_delimiter))))

================
Empty code block
================

```
```

---

(document
  (section
    (fenced_code_block
      (fenced_code_block_delimiter)
      (fenced_code_block_delimiter))))

================
Tilde code block
================

~~~
code here
~~~

---

(document
  (section
    (fenced_code_block
      (fenced_code_block_delimiter)
      (code_fence_content)
      (fenced_code_block_delimiter))))

================
Code block with line range indicator
================

```js{1,3,5-8}
const x = 1;
```

---

(document
  (section
    (fenced_code_block
      (fenced_code_block_delimiter)
      language: (language)
      line_ranges: (line_range_indicator)
      (code_fence_content)
      (fenced_code_block_delimiter))))

================
Code block with range indicator but no language
================

```{1,3}
code
```

---

(document
  (section
    (fenced_code_block
      (fenced_code_block_delimiter)
      line_ranges: (line_range_indicator)
      (code_fence_content)
      (fenced_code_block_delimiter))))

================
Code block with space before range indicator
================

```js {1,3}
code
```

---

(document
  (section
    (fenced_code_block
      (fenced_code_block_delimiter)
      language: (language)
      line_ranges: (line_range_indicator)
      (code_fence_content)
      (fenced_code_block_delimiter))))

================
Multi-line code block
================

```python
def hello():
    print("world")
```

---

(document
  (section
    (fenced_code_block
      (fenced_code_block_delimiter)
      language: (language)
      (code_fence_content)
      (fenced_code_block_delimiter))))

================================================================================
Fenced code block with a language only
================================================================================

```js
const a = 1
```

--------------------------------------------------------------------------------

(document
  (section
    (fenced_code_block
      (fenced_code_block_delimiter)
      language: (language)
      (code_fence_content)
      (fenced_code_block_delimiter))))

================================================================================
Fenced code block with a single line range
================================================================================

```js{1}
const a = 1
```

--------------------------------------------------------------------------------

(document
  (section
    (fenced_code_block
      (fenced_code_block_delimiter)
      language: (language)
      line_ranges: (line_range_indicator)
      (code_fence_content)
      (fenced_code_block_delimiter))))

================================================================================
Fenced code block with a list of ranges
================================================================================

```rust{1,3,5-8}
let a = 1;
let b = 2;
```

--------------------------------------------------------------------------------

(document
  (section
    (fenced_code_block
      (fenced_code_block_delimiter)
      language: (language)
      line_ranges: (line_range_indicator)
      (code_fence_content)
      (fenced_code_block_delimiter))))

================================================================================
Fenced code block with a range but no language
================================================================================

```{1,3}
plain
```

--------------------------------------------------------------------------------

(document
  (section
    (fenced_code_block
      (fenced_code_block_delimiter)
      line_ranges: (line_range_indicator)
      (code_fence_content)
      (fenced_code_block_delimiter))))

================================================================================
Fenced code block whose body contains braces
================================================================================

```js
const o = { a: 1 }
```

--------------------------------------------------------------------------------

(document
  (section
    (fenced_code_block
      (fenced_code_block_delimiter)
      language: (language)
      (code_fence_content)
      (fenced_code_block_delimiter))))

================================================================================
Fenced code block inside a container slot
================================================================================

::: card
question
=== key
```js{1}
const a = 1
```
:::

--------------------------------------------------------------------------------

(document
  (section
    (container_block
      (container_block_delimiter)
      type: (container_type)
      (paragraph
        (inline))
      (container_slot_separator
        (container_slot_delimiter)
        name: (container_slot_name))
      (fenced_code_block
        (fenced_code_block_delimiter)
        language: (language)
        line_ranges: (line_range_indicator)
        (code_fence_content)
        (fenced_code_block_delimiter))
      (container_block_delimiter))))
